syntax = "proto3";

option java_multiple_files = false;
option java_package = "test";
option java_outer_classname = "testProto";
option objc_class_prefix = "TS";

package test;

service TestService {
  rpc testFunction (TestInput) returns (TestOutput) {}
}

message TestInput {
  string Key = 1;
  string name = 222;
}

message TestOutput {
  string Key = 1;
  string name = 2;
  string age = 55555;

}